M_balcony-alignment.html fix

--- a/wp-content/themes/twentytwenty-child/css/module/general/balcony-alignment.scss
+++ b/wp-content/themes/twentytwenty-child/css/module/general/balcony-alignment.scss
@@ -11,22 +11,59 @@
 
     &__wrapper {
         text-align: center;
+
+        @include _768 {
+            text-align: left;
+        }
+    }
+
+    &__title {
+        line-height: 1.2;
+        padding: 0 1em;
+        margin-bottom: 1.2em;
+
+        @include _768 {
+            padding: 0;
+            line-height: 1.1;
+            margin-bottom: 1em;
+        }
+
+        @include _1200 {
+            line-height: 1.2;
+            margin-bottom: 0.7em;
+        }
     }
 
     /* .balcony-alignment__slider */
 
+    &__text {
+        line-height: 1.2;
+        margin-bottom: 1.4em;
+
+        @include _768 {
+            line-height: 1.25;
+            margin-bottom: 1.6em;
+        }
+    }
+
     &__slider {
-        margin-bottom: 2.1em;
+        margin-bottom: 1.7em;
+        padding-bottom: 0.3em;
 
         .pagination.active {
             background-color: $blue;
         }
 
-        @include _768 {
+        .balcony-alignment__text {
+            margin-bottom: 0;
+        }
+
+        @include _1200 {
             display: flex;
             justify-content: space-around;
             flex-wrap: wrap;
             margin-bottom: 0;
+            padding-bottom: 0;
         }
     }
 
@@ -34,65 +71,57 @@
 
     &__item {
         @include _768 {
-            margin-bottom: 2.2em;
+            display: flex;
         }
 
         @include _1200 {
-            max-width: 53.4rem;
-            margin-bottom: 3.8em;
+
+            &+& {
+                margin-top: 1.9em;
+            }
         }
     }
 
     /* .balcony-alignment__item-title */
 
     &__item-title {
-        padding: 0.5em 4.5em 0.3em;
-        line-height: 1.2em;
-        background-color: $yellow;
-        border-radius: 2.3em 2.3em 0 0;
+        margin-bottom: 0.8em;
+    }
+
+    &__box-img {
+        width: 100%;
+        max-width: 22.5rem;
+        height: 15.1rem;
+        margin: 0 auto;
+        border-radius: 0.6rem;
+        overflow: hidden;
+        margin-bottom: 1.7em;
 
         @include _768 {
-            max-width: 53.4rem;
-            margin: 0 auto;
-            padding: 0.9em 7.5em 0.7em;
+            max-width: 22.6rem;
+            height: 18rem;
+            margin-right: 1em;
+            margin-bottom: 0;
         }
 
         @include _1200 {
-            padding: 0.6em 5.1em 0.4em;
-
+            max-width: 22.5rem;
+            height: 15.1rem;
+            margin-right: 1.1em;
         }
     }
 
     /* .balcony-alignment__img */
 
     &__img {
-        width: 33.3rem;
-        height: 24.2rem;
-        margin: 0 auto;
-        border-radius: 0 0 2.3em 2.3em;
-        margin-bottom: 1.7em;
-
-        @include _768 {
-            width: 53.4rem;
-            height: 28.7rem;
-            margin-bottom: 1.3em;
-        }
-
-        @include _1200 {
-            margin-bottom: 1.9em;
-        }
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 
-    /* .balcony-alignment__text */
-
-    &__text {
+    &__box-info {
         @include _768 {
-            padding: 0 3.5em;
-        }
-
-        @include _1200 {
-            text-align: left;
-            padding: 0;
+            width: 100%;
         }
     }
 }
